feat : jpa example

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,5 +2,11 @@ spring:
   h2:
     console:
       enabled: true
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    defer-datasource-initialization: true
 server:
   port: 8070
